--- a/Lesson8/stormcenter.html
+++ b/Lesson8/stormcenter.html
@@ -33,56 +33,84 @@
         <li><a href="../Lesson7/gallery-7.html">Gallery</a></li>
       </ul>
     </nav>
-    <body>
-      <form method="get" action="thankyou.html"> 
-        <h3>Your Information</h3>
-        <fieldset>
-          <label class="top"
-            >Full Name*: <input type="text" name="fullname" required
-          /></label>
-          <label class="top"
-            >Email:
-            <input type="email" name="email" placeholder="someone@gmail.com"
-          /></label>
-          <label class="top"
-            >Phone Number*: <input type="tel" name="phone" required
-          /></label>
-          <label class="top">Zip Code*: <input type="number" name="zip" required /></label>
-        </fieldset>
-        <h3>Storm Information</h3>
-        <fieldset>
-          <label class="top">Storm Date: <input type="date" name="date" /></label>
-          <label class="top"
-            >Storm Type: <input list="stormtype"/>
-            <datalist id=stormtype>
+
+    <form method="get" action="thankyou.html">
+      <h2>Your Information</h2>
+      <fieldset>
+        <label class="top"
+          >Full Name*: <input type="text" name="fullname" required
+        /></label>
+        <label class="top"
+          >Email:
+          <input type="email" name="email" placeholder="someone@gmail.com"
+        /></label>
+        <label class="top"
+          >Phone Number*: <input type="tel" name="phone" required
+        /></label>
+        <label class="top"
+          >Zip Code*: <input type="number" name="zip" required
+        /></label>
+      </fieldset>
+      <h2>Storm Information</h2>
+      <fieldset>
+        <label class="top">Storm Date: <input type="date" name="date" /></label>
+        <label class="top"
+          >Storm Type: <input list="stormtype" />
+          <datalist id="stormtype">
             <option value="Flash Flood"></option>
             <option value="Hail"></option>
             <option value="Hurricane"></option>
             <option value="Thunderstorm"></option>
             <option value="Tornado"></option>
           </datalist>
-          </label>
-          <label class="top">Storm Severity: <input type="range" name="severity" min="1" max="10" class="stormrange"></label>
-          <label class="top">Storm Region: <select name="region">
+        </label>
+        <label class="top"
+          >Storm Severity:
+          <input
+            type="range"
+            name="severity"
+            min="1"
+            max="10"
+            class="stormrange"
+        /></label>
+        <label class="top"
+          >Storm Region:
+          <select name="region">
             <option value="" selected disabled>Select Region...</option>
             <option value="fishhaven">Fish Haven</option>
             <option value="preston">Preston</option>
             <option value="sodasprings">Soda Springs</option>
           </select>
-          <div>User In Danger</div>
-          <div class="custom-vertical-radio-buttons">
-          <label class="customcontainer">Yes<input type="radio" name="danger" value="Yes"/><span class="custom-radio-button"></span></label>
-          <label class="customcontainer">Maybe<input type="radio" name="danger" value="Maybe"/><span class="custom-radio-button"></span></label>
-          <label class="customcontainer">No<input type="radio" name="danger" value="No"/><span class="custom-radio-button"></span></label>
+        </label>
+        <div>User In Danger</div>
+        <div class="custom-vertical-radio-buttons">
+          <label class="customcontainer"
+            >Yes<input type="radio" name="danger" value="Yes" /><span
+              class="custom-radio-button"
+            ></span
+          ></label>
+          <label class="customcontainer"
+            >Maybe<input type="radio" name="danger" value="Maybe" /><span
+              class="custom-radio-button"
+            ></span
+          ></label>
+          <label class="customcontainer"
+            >No<input type="radio" name="danger" value="No" /><span
+              class="custom-radio-button"
+            ></span
+          ></label>
         </div>
-        </fieldset>
-        <h3>Additional Information or Comments</h3>
-        <fieldset>
-        <label class="textbx"><textarea name="additioncomments" rows="10" cols="25"></textarea></label>
       </fieldset>
-        <label><input class="submitBtn" type="submit" value="Show My Report"></label>
-      </form>
-    </body>
+      <h2>Additional Information or Comments</h2>
+      <fieldset>
+        <label class="textbx">
+          <textarea name="additioncomments" rows="10" cols="25"></textarea>
+        </label>
+      </fieldset>
+      <label
+        ><input class="submitBtn" type="submit" value="Show My Report"
+      /></label>
+    </form>
     <footer>
       <h1>Contact Information</h1>
       <div>&#9993;: jongomez3377@gmail.com</div>
