--- a/Lesson8/tablebuild.html
+++ b/Lesson8/tablebuild.html
@@ -38,10 +38,10 @@
         <tr>
           <td>November</td>
           <td>$8,610</td>
-          <th>$7,500</th>
+          <td id="special">$7,500</td>
         </tr>
         <tr>
-          <td id="special">Black Friday</td>
+          <td><em>Black Friday</em></td>
           <td colspan="2">$3,200</td>
         </tr>
         <tr>
