--- a/Lesson8/stormcenter.html
+++ b/Lesson8/stormcenter.html
@@ -45,7 +45,7 @@
             required
             minlength="5"
             pattern="[A-Za-z]"
-        /></label>
+        ></label>
         <label class="top"
           >Email:
           <input type="email" name="email" placeholder="someone@gmail.com"
